--- a/styles/style.css
+++ b/styles/style.css
@@ -5,14 +5,16 @@ body{
     margin: 0;
     padding: 0;
 }
+
 /* top styles start here */
 .top{
-    width: 1440px;
+    width: 1400px;
     height: 677px;
     background-color: #2D25A0;
     display: flex;
     
 }
+
 .head-title{
     width: 487px;
     height: 320px;
@@ -69,7 +71,7 @@ body{
     width: 556.01px;
     height: 438px;
    padding-top: 153px;
-    padding-right: 140px;
+    
     padding-bottom: 86px;
     padding-left: 102px;
     
@@ -84,6 +86,7 @@ body{
 .players{
     display: grid;
     grid-template-columns: repeat(3, 340px);
+    justify-content: center;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
     margin: auto;
@@ -122,13 +125,16 @@ body{
    width: 400px;
    height: 300px;
    border-radius: 15px;
+   margin: auto;
   
 }
 .gallary-photos{
     display: grid;
     grid-template-columns: repeat(3, 400px);
+    justify-content: center;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
+    margin-right: 30px;
 }
 /* footer starts here */
 footer{
@@ -153,8 +159,13 @@ footer{
     font-size: 18px;
 }
 /* for responsive, here is query */
-@media only screen and (max-width: 688px) {
-      /* for hovoring */
+@media only screen and (max-width: 695px) {
+     
+   .top-space{
+       width: 100%;
+   }
+    
+    /* for hovoring */
 .top:hover .big-writing{
     transform: rotate(360deg);
     transition: transform 1s ease-in;
@@ -174,7 +185,7 @@ footer{
         flex-direction: column;
     }
     .head-title{
-        padding-left: 16px;
+        padding-left: 50px;
         padding-top: 112px;
         padding-right: 66px;
     }
@@ -207,7 +218,9 @@ footer{
         position: relative;
         top: -160px;
     }
-  
+    .container{
+        width: 100%;
+    }
     .container{
         margin-top: 47px;
         margin-left: 15px;
@@ -219,6 +232,24 @@ footer{
         grid-template-columns: repeat(1, 1fr);
         
         grid-row-gap: 25px;
+    }
+    /* for photo gallary */
+    .photo img{
+        width: 400px;
+        height: 300px;
+        border-radius: 15px;
+       
+     }
+     .gallary-photos{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 30px;
+        justify-content: center;
+    }
+    
+    .finish{
+        width: 100%;
     }    
     footer{
         display: flex;
@@ -246,20 +277,6 @@ footer{
     .copy{
         margin-top: 20px;
         font-size: 18px;
-    }
-    /* for photo gallary */
-    .photo img{
-        width: 400px;
-        height: 300px;
-        border-radius: 15px;
-       
-     }
-     .gallary-photos{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-column-gap: 30px;
-        grid-row-gap: 30px;
-        justify-content: center;
     }
     
 
